# GlueMigrator

./: .gitignore  README.md
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/v1/: accounts.py  credentials.py  jobs.py  migrations.py
backend/app/core/: config.py  encryption.py
backend/app/db/: crud.py  database.py  models.py
backend/app/services/: itglue_client.py  migration_engine.py
docs/: ROADMAP.md
